finish base function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,10 @@ project(LAT)
 
 # 设置
 set(CMAKE_CXX_STANDARD 14)
-set(COMPILE_FLAGS "-std=c++14   -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS")
+
+
+set(CMAKE_ELF_LINKER_FLAGS    "-g")
+# set ( CMAKE_VERBOSE_MAKEFILE on  )
 # set(LINK_FLAGS "$(-L/usr/lib/llvm-10/lib -lLLVM-10)")
 
 # target_link_libraries("$(llvm-config-10 --libs)") 
@@ -18,7 +21,7 @@ set(COMPILE_FLAGS "-std=c++14   -fno-exceptions -D_GNU_SOURCE -D__STDC_CONSTANT_
 include_directories(${CMAKE_SOURCE_DIR}/include /usr/lib/llvm-10/include)
 link_directories("/usr/lib/llvm-10/lib")
 link_libraries("LLVM-10")
-add_compile_options("${COMPILE_FLAGS}")
+add_compile_options(-std=c++14 --save-temps -fno-rtti -fno-exceptions -g -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
 
 # 编译源码生成目标
 add_executable(LAT init.cpp)
