LAT version release V0.1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,9 @@ link_directories("/usr/lib/llvm-10/lib")
 link_libraries("LLVM-10")
 add_compile_options(-std=c++14 --save-temps -fno-rtti -fno-exceptions -g -D_GNU_SOURCE -D__STDC_CONSTANT_MACROS -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS)
 
+FILE(GLOB SC_FILES "*.cpp")
+
 # 编译源码生成目标
-add_executable(LAT init.cpp FunctionCallPass.cpp SelectionCountPass.cpp LoopCountPass.cpp FunctionNamePass.cpp)
+# add_executable(LAT init.cpp FunctionCallPass.cpp SelectionCountPass.cpp LoopCountPass.cpp FunctionNamePass.cpp)
+add_executable(LAT ${SC_FILES})
 
